# Lightining-Parser-Chunker-Rust-WASM-CLI

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  flake.nix
.github/workflows/: ci.yml  cla.yml  release.yml
benches/: parsing.rs
benchmarks/: bench_docling.py  bench_langchain.py  bench_parser_chunker.sh  bench_unstructured.py  generate_report.py  run_all.sh
scripts/: download_models.py  generate-sbom.sh  generate_benchmark_corpus.py  package.sh
signatures/: cla.json
src/: cli.rs  config.rs  lib.rs  main.rs  orchestrator.rs
src/chunking/: by_page.rs  by_structure.rs  by_title.rs  fixed_size.rs  mod.rs
src/format/: csv_tsv.rs  docx.rs  email.rs  html.rs  image.rs  mod.rs  msg.rs  pdf.rs  pptx.rs  rtf.rs  text.rs  xlsx.rs
src/model/: block.rs  chunk.rs  element.rs  mod.rs
src/output/: compat.rs  json.rs  markdown.rs  mod.rs  parquet.rs
src/vision/: layout.rs  mod.rs  ocr.rs  table.rs
test-fixtures/e2e/: sample.html  sample.md  sample.txt
tests/: accuracy_tests.rs  cli_integration.rs  format_tests.rs  integration.rs  vision_ocr_tests.rs
